src/component/chat/ChatGroup.scss
@import '../../styles/_vars.scss';

.container {
  position: relative;
}

.wrapper {
  composes: u-cf from global;
  display: block;
  margin-left: #{40/$font-size}rem;

  [dir='rtl'] & {
    margin-left: 0;
    margin-right: #{40/$font-size}rem;
  }
}

.message {
  margin-bottom: #{7/$font-size}rem;
}

.messageUser {
  color: $zd-color-white;
  text-align: right;
  float: right;

  [dir='rtl'] & {
    text-align: left;
    float: left;
  }
}

.messageAgent {
  color: $zd-color-black;
  float: left;

  [dir='rtl'] & {
    float: right;
  }
}

.attachment {
  width: #{180/$font-size}rem;
  border-radius: #{8/$font-size}rem;
}

.attachmentError {
  composes: u-borderError from global;
  float: right;

  [dir='rtl'] & {
    float: left;
  }
}

.messageErrorContainer {
  margin-top: #{2/$font-size}rem;
  margin-bottom: $spacing-tny;
}

.attachmentMessageErrorContainer {
  margin-top: $spacing-tny;
  text-align: right;

  [dir='rtl'] & {
    text-align: left;
  }
}

.userBackground {
  composes: u-userBackgroundColor from global;
}

.agentBackground {
  background: $zd-color-anti-flash-white;
  max-width: #{219/$font-size}rem !important;
}

.name {
  margin: $spacing-tny 0;
  color: $zd-color-aluminum !important;
}

.nameAvatar {
  composes: name;
  margin-left: #{50/$font-size}rem;

  [dir='rtl'] & {
    margin-right: #{50/$font-size}rem;
  }
}

.nameNoAvatar {
  composes: name;
  margin-left: $spacing-sml;

  [dir='rtl'] & {
    margin-left: 0;
    margin-right: $spacing-sml;
  }
}

.avatar {
  position: absolute;
  bottom: #{7/$font-size}rem;

  svg {
    min-width: #{32/$font-size}rem;
    min-height: #{32/$font-size}rem;
    max-width: #{32/$font-size}rem;
    max-height: #{32/$font-size}rem;
  }
}

.avatarDefault {
  composes: avatar;
  height: #{32/$font-size}rem;
  width: #{32/$font-size}rem;
}

.avatarWithSrc {
  composes: avatar;
  height: #{32/$font-size}rem;
  width: #{32/$font-size}rem;
}

